--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,6 +13,8 @@ import Followers from "@/components/Followers.astro";
         src={NewJeans}
         alt="NewJeans"
         class="h-72 w-72 rounded shadow-xl"
+        height={288}
+        width={288}
       />
       <div class="flex-1 flex flex-col">
         <span class="text-neutral-300 text-xl">Estación actual</span>
