--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<header class="sticky w-full top-0 left-0 bg-brand text-white shadow-xl">
+<header class="sticky w-full top-0 left-0 z-50 bg-brand text-white shadow-xl">
   <div class="max-w-6xl px-2 m-auto flex justify-between items-center h-16">
     <span class="text-xl font-bold font-mono">Player.io</span>
     <nav class="flex gap-4">
