--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Playlist from "@/components/player/Playlist";
 ---
 
 <Layout title="Inicio" description="Pagina de inicio">
-  <main class="flex flex-col">
+  <main class="flex flex-col pb-8 bg-gradient-to-b from-[#ccd8f1] to-[#e7edf7]">
     <Hero />
     <section class="px-2 mt-8 max-w-6xl m-auto w-full flex flex-col gap-8">
       <h2 class="font-bold text-2xl">Escucha las canciones de la estación:</h2>
