--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,26 +6,28 @@ import { Image } from "astro:assets";
 import Followers from "@/components/Followers.astro";
 ---
 
-<section class="w-full bg-gradient-to-b from-neutral-500 to-green-800">
-  <div class="px-2 max-w-6xl m-auto w-full min-h-[32rem] flex">
-    <div class="my-auto flex gap-8">
-      <Image
-        src={NewJeans}
-        alt="NewJeans"
-        class="h-72 w-72 rounded shadow-xl"
-        height={288}
-        width={288}
-      />
-      <div class="flex-1 flex flex-col">
-        <span class="text-neutral-300 text-xl">Estación actual</span>
-        <div class="flex gap-4">
-          <h1 class="font-bold text-white text-7xl">NewJeans</h1>
-          <Play client:load />
-        </div>
-        <Followers />
-        <div class="mt-auto">
-          <Share client:load />
-        </div>
+<section
+  class="w-full bg-gradient-to-b flex min-h-[32rem] from-neutral-500 to-green-800"
+>
+  <div
+    class="max-w-6xl w-full lg:items-stretch items-center min-h-72 m-auto flex flex-col lg:flex-row gap-4 lg:gap-8"
+  >
+    <Image
+      src={NewJeans}
+      alt="NewJeans"
+      class="rounded shadow-xl"
+      height={288}
+      width={288}
+    />
+    <div class="flex-1 flex flex-col">
+      <span class="text-neutral-300 text-xl">Estación actual</span>
+      <div class="flex gap-4">
+        <h1 class="font-bold text-white text-5xl lg:text-7xl">NewJeans</h1>
+        <Play className="size-16 lg:size-20" client:load />
+      </div>
+      <Followers />
+      <div class="mt-8 lg:mt-auto flex">
+        <Share client:load />
       </div>
     </div>
   </div>
