--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,6 +18,7 @@ import Followers from "@/components/Followers.astro";
       class="rounded shadow-xl"
       height={288}
       width={288}
+      loading="eager"
     />
     <div class="flex-1 flex flex-col">
       <span class="text-neutral-300 text-xl">Estación actual</span>
