--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { title, description } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/music-player/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>{title} | Player.io</title>
   </head>
   <body>
