--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import { Image } from "astro:assets";
       </div>
       <a
         class="border text-center rounded-full p-2 hover:bg-neutral-200 transition-all"
-        href="/music-player/station"
+        href=`${import.meta.env.BASE_URL}/station`
       >
         O como invitado
       </a>
